--- a/package.json
+++ b/package.json
@@ -23,19 +23,21 @@
     "hast-util-sanitize": "^3.0.2",
     "highlight.js": "^10.7.1",
     "lodash.debounce": "^4.0.8",
-    "nuxt": "^2.16.3",
-    "nuxt-typed-vuex": "^0.2.0",
+    "nuxt": "^3.6.5",
     "postcss": "^8.4.21",
     "remark": "^13.0.0",
     "remark-highlight.js": "^6.0.0",
     "remark-html": "^13.0.1",
     "remark-preset-lint-recommended": "^5.0.0",
     "ts-node": "^10.9.1",
+    "typed-vuex": "^0.3.1",
     "typescript": "^5.0.4",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "vue": "^3.3.4",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@nuxt/bridge": "npm:@nuxt/bridge-edge@^3.0.0-27998567.a12a710",
+    "@nuxt/devtools": "^0.8.0",
     "@nuxt/types": "^2.16.3",
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/stylelint-module": "^4.1.0",
@@ -51,7 +53,7 @@
     "babel-jest": "^29.5.0",
     "dotenv": "^16.0.0",
     "eslint": "^8.39.0",
-    "eslint-plugin-vue": "^9.11.0",
+    "eslint-plugin-vue": "^9.17.0",
     "firebase-tools": "^9.2.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
