--- a/firebase.json
+++ b/firebase.json
@@ -36,6 +36,10 @@
     ],
     "rewrites": [
       {
+        "source": "dashboard/articles/**",
+        "destination": "/200.html"
+      },
+      {
         "source": "**",
         "destination": "/index.html"
       }
