--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
     "test": "jest",
     "deploy:sta": "npm run generate && firebase deploy --only hosting --project=staging-konkarin-photo",
-    "deploy:prod": "npm run generate && firebase deploy --only hosting --project=konkarin-photo"
+    "deploy:prod": "npm run generate && firebase deploy --only hosting --project=konkarin-photo",
+    "typecheck": "tsc --noEmit",
+    "vue-type": "vue-tsc --noEmit"
   },
   "dependencies": {
     "blueimp-load-image": "^5.14.0",
@@ -54,6 +56,7 @@
     "sass": "^1.32.5",
     "sass-loader": "^10.1.1",
     "ts-jest": "^29.1.1",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.2",
+    "vue-tsc": "^1.8.22"
   }
 }
