--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,31 +8,7 @@
     "strict": true,
     "noEmit": true,
     "experimentalDecorators": true,
-    "baseUrl": ".",
-    "types": ["@types/node", "@nuxt/types", "@types/jest", "@types/uuid", "@types/lodash.debounce"],
-
-    "paths": {
-      "~": ["./app"],
-      "~/*": ["./app/*"],
-      "@": ["./app"],
-      "@/*": ["./app/*"],
-      "~~": ["."],
-      "~~/*": ["*"],
-      "@@": ["."],
-      "@@/*": ["./*"],
-      "assets": ["./app/assets"],
-      "assets/*": ["./app/assets/*"],
-      "public": ["./app/public"],
-      "public/*": ["./app/public/*"],
-      "#app": ["node_modules/nuxt/dist/app"],
-      "#app/*": ["node_modules/nuxt/dist/app/*"],
-      "vue-demi": ["node_modules/nuxt/dist/app/compat/vue-demi"],
-      "#vue-router": [".nuxt/vue-router"],
-      "#imports": [".nuxt/imports"],
-      "#build": [".nuxt"],
-      "#build/*": [".nuxt/*"],
-      "#components": [".nuxt/components"]
-    }
+    "types": ["@types/node", "@types/jest", "@types/uuid", "@types/lodash.debounce"]
   },
   "exclude": ["node_modules", "functions"]
 }
