--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,6 +60,8 @@ jobs:
       - image: cimg/node:16.13.0
     steps:
       - checkout
+      - set-env
+      - switch-env
       - install-modules
       - run:
           name: build
@@ -91,6 +93,8 @@ jobs:
       - image: cimg/node:16.13.0
     steps:
       - checkout
+      - set-env
+      - switch-env
       - install-modules
       - run:
           name: build
