--- a/package.json
+++ b/package.json
@@ -20,15 +20,18 @@
     "blueimp-load-image": "^5.14.0",
     "dayjs": "^1.10.2",
     "firebase": "^9.23.0",
-    "hast-util-sanitize": "^3.0.2",
-    "highlight.js": "^10.7.1",
+    "highlight.js": "^11.1.1",
     "lodash.debounce": "^4.0.8",
     "postcss": "^8.4.21",
-    "remark": "^13.0.0",
-    "remark-highlight.js": "^6.0.0",
-    "remark-html": "^13.0.1",
-    "remark-preset-lint-recommended": "^5.0.0",
+    "rehype-highlight": "^7.0.1",
+    "rehype-stringify": "^10.0.1",
+    "remark-breaks": "^4.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-html": "^16.0.1",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.1",
     "typed-vuex": "^0.3.1",
+    "unified": "^11.0.5",
     "uuid": "^8.3.2",
     "vue": "^3.5.12",
     "vuex": "^4.1.0"
@@ -41,7 +44,6 @@
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.4.6",
-    "babel-core": "7.0.0-bridge.0",
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.30.0",
     "firebase-tools": "^12.4.8",
