--- a/functions/package.json
+++ b/functions/package.json
@@ -23,14 +23,7 @@
     "image-size": "^0.9.3"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.16.0",
-    "@typescript-eslint/parser": "^6.16.0",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^8.10.0",
-    "eslint-plugin-import": "^2.29.1",
-    "firebase-functions-test": "^0.2.0",
-    "prettier": "^2.2.1",
-    "typescript": "^4.5.5"
+    "firebase-functions-test": "^0.2.0"
   },
   "overrides": {
     "stream-shift": "1.0.2"
