--- a/package.json
+++ b/package.json
@@ -33,11 +33,9 @@
     "remark-html": "^16.0.1",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.1",
-    "typed-vuex": "^0.3.1",
     "unified": "^11.0.5",
     "uuid": "^8.3.2",
-    "vue": "^3.5.12",
-    "vuex": "^4.1.0"
+    "vue": "^3.5.12"
   },
   "devDependencies": {
     "@types/lodash.debounce": "^4.0.6",
