--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,8 +11,13 @@
   // Use 'forwardPorts' to make a list of ports inside the container available locally.
   // "forwardPorts": [],
 
-  // Use 'postCreateCreaommand' to run commands after the container is created.
-  "postCreateCommand": "echo 'alias dev=\"npm run dev\"' >> ~/.bashrc && echo 'alias cz=\"npx git-cz\"' >> ~/.bashrc"
+  // Mount a named volume to persist home directory data
+  "mounts": [
+    "source=vscode-home,target=/home/node,type=volume"
+  ],
+
+  // Use 'postCreateCommand' to run commands after the container is created.
+  "postCreateCommand": "./.devcontainer/post-create.sh"
 
   // Configure tool-specific properties.
   // "customizations": {},
