--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
     "rehype-parse": "^9.0.1",
     "rehype-remark": "^10.0.1",
     "rehype-stringify": "^10.0.1",
+    "remark": "^15.0.1",
     "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.0",
     "remark-html": "^16.0.1",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.1",
     "remark-stringify": "^11.0.0",
+    "strip-markdown": "^6.0.0",
     "unified": "^11.0.5",
     "unist-util-visit": "^5.0.0",
     "uuid": "^8.3.2",
