--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@vue/eslint-config-typescript": "^14.5.0",
     "@vue/test-utils": "^2.4.6",
     "eslint": "^9.25.1",
+    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-oxlint": "^0.16.0",
     "eslint-plugin-vue": "~10.0.0",
     "firebase-tools": "^13.35.1",
