--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "eslint-plugin-vue": "~10.0.0",
     "firebase-tools": "^13.35.1",
     "happy-dom": "^14.12.3",
-    "nuxt": "^3.17.4",
+    "nuxt": "4.0.3",
     "oxlint": "^0.16.0",
     "prettier": "^3.5.3",
     "typescript": "^5.7.2",
