--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "vue": "3.5.18"
   },
   "devDependencies": {
+    "@nuxtjs/sitemap": "7.5.0",
     "@types/node": "^22.8.6",
     "@types/uuid": "^8.3.4",
     "@vitest/eslint-plugin": "^1.1.39",
